# agentscope

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING_zh.md  README.md  README_zh.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: github-monitor.yml  publish-pypi.yml  sphinx_docs.yml  stale.yml  unittest.yml  web-ui.yml
docs/: FAQ.md  FAQ_zh.md  NEWS.md  NEWS_zh.md
docs/tutorial/en/: build.sh  conf.py  index.rst
docs/tutorial/zh_CN/: build.sh  conf.py
en/.doctrees/: environment.pickle  index.doctree
examples/agent/browser_agent/: README.md
examples/agent/deep_research_agent/: README.md  deep_research_agent.py  main.py  utils.py
examples/agent/meta_planner_agent/: README.md
examples/agent/react_agent/: main.py
examples/agent/voice_agent/: main.py
examples/agent_browser/: browser_agent.py
examples/agent_service/: README.md  main.py
examples/alibabacloud_api_mcp/: oauth_handler.py
examples/evaluation/ace_bench/: main.py
examples/functionality/agent_skill/: README.md  main.py
examples/functionality/rag/: example.docx
examples/functionality/tts/: main.py
examples/game/werewolves/: README.md  game.py  main.py  prompt.py  structured_model.py  utils.py
examples/integration/alibabacloud_api_mcp/: README.md  main.py
examples/long_term_memory/agentic_memory/: README.md  main.py
examples/long_term_memory/mem0/: README.md  oss_demo.py
examples/long_term_memory/reme/: README.md  reme_demo.py
examples/memory_with_compression/: README.md  _mc_utils.py  _memory_storage.py  _memory_with_compress.py  main.py
examples/rag/: README.md  index_and_search.py  integrate_with_agent.py
examples/react_agent/: main.py
examples/training/react_agent/: README.md  config.yaml  main.py
examples/tuner/model_selection/: README.md  example_bleu.py  example_token_usage.py
examples/tuner/model_tuning/: README.md  config.yaml  main.py
examples/tuner/prompt_tuning/: README.md  example.py
examples/web_ui/: package.json  pnpm-lock.yaml
examples/web_ui/frontend/: package.json  tsconfig.app.json
scripts/model_examples/: README.md  _utils.py  anthropic_call.py  anthropic_multiagent.py  anthropic_multiagent_multimodal.py  anthropic_multimodal.py  dashscope_call.py  dashscope_multiagent.py  dashscope_multiagent_multimodal.py  dashscope_multimodal.py  deepseek_call.py  deepseek_multiagent.py  gemini_call.py  gemini_multiagent.py  gemini_multiagent_multimodal.py  gemini_multimodal.py  kimi_multiagent_multimodal.py  kimi_multimodal.py  moonshot_call.py  moonshot_multiagent.py  moonshot_multiagent_multimodal.py  moonshot_multimodal.py  ollama_call.py  ollama_multiagent.py  ollama_multiagent_multimodal.py  openai_chat_call.py  openai_chat_multiagent_multimodal.py  openai_chat_multimodal.py  openai_response_call.py  openai_response_multiagent_multimodal.py  xai_call.py  xai_multiagent_multimodal.py
src/agentscope/: __init__.py  _agentscope_config.py  _config.py  _run_config.py  _version.py
src/agentscope/_utils/: _audio.py  _common.py
src/agentscope/agent/: __init__.py  _agent.py  _agent_base.py  _config.py  _react_agent.py
src/agentscope/app/: __init__.py  _app.py  _bus_ops.py  _deps.py  _lifespan.py  _types.py  deps.py
src/agentscope/credential/: __init__.py  _base.py  _dashscope.py  _factory.py  _gemini.py  _moonshot.py  _ollama.py  _openai.py  _xai.py
src/agentscope/embedding/: __init__.py  _dashscope_multimodal_embedding.py  _embedding_base.py  _embedding_model_card.py  _ollama_embedding.py
src/agentscope/event/: __init__.py  _event.py
src/agentscope/formatter/: _anthropic_formatter.py  _dashscope_formatter.py  _deepseek_formatter.py  _formatter_base.py  _gemini_formatter.py  _moonshot_formatter.py  _ollama_formatter.py  _openai_formatter.py  _openai_response_formatter.py  _xai_formatter.py
src/agentscope/hooks/: _studio_hooks.py
src/agentscope/mcp/: _client_base.py  _mcp_client.py
src/agentscope/memory/: __init__.py  _long_term_memory_base.py  _mem0_long_term_memory.py  _mem0_utils.py
src/agentscope/message/: _base.py  _block.py  _message_base.py  _message_block.py
src/agentscope/middleware/: __init__.py  _base.py  _budget.py  _rag.py  _tts_middleware.py
src/agentscope/model/: __init__.py  _anthropic_model.py  _base.py  _dashscope_model.py  _gemini_model.py  _model_base.py  _model_card.py  _model_response.py  _ollama_model.py  _openai_model.py  _trinity_model.py
src/agentscope/models/: dashscope_model.py  gemini_model.py  openai_model.py  response.py  zhipu_model.py
src/agentscope/permission/: _decision.py  _engine.py  _types.py
src/agentscope/pipeline/: _functional.py  _msghub.py
src/agentscope/plan/: _in_memory_storage.py  _plan_model.py  _plan_notebook.py
src/agentscope/rag/: __init__.py  _document.py  _knowledge.py
src/agentscope/session/: __init__.py  _json_session.py  _tablestore_session.py
src/agentscope/state/: __init__.py  (+2 more)
tests/: agent_basic_test.py  agui_protocol_test.py  app_lifespan_dedicated_test.py  backend_docker_test.py  backend_e2b_test.py  backend_local_test.py  blob_store_s3_test.py  builtin_bash_test.py  builtin_edit_test.py  builtin_glob_test.py  builtin_grep_test.py  builtin_read_test.py  builtin_write_test.py  compress_context_test.py  config_test.py  converter_test.py  embedding_dashscope_test.py  embedding_gemini_test.py  embedding_ollama_test.py  embedding_openai_test.py  event_test.py  event_to_message_test.py  formatter_anthropic_test.py  formatter_dashscope_test.py  formatter_deepseek_test.py  formatter_gemini_test.py  formatter_moonshot_test.py  formatter_ollama_test.py  formatter_openai_chat_test.py  formatter_openai_response_test.py  formatter_openai_test.py  formatter_xai_test.py  hitl_external_execution_test.py  hitl_user_confirmation_test.py  id_factory_test.py  in_memory_message_bus_test.py  index_worker_lease_test.py  mcp_sse_client_test.py  mcp_streamable_http_client_test.py  mem0_agentscope_adapter_test.py  (+70 more)
zh_CN/.doctrees/: environment.pickle  index.doctree
(+419 files in other folders)
